credits and dept updates

--- a/src/scss/grid-cards.scss
+++ b/src/scss/grid-cards.scss
@@ -210,7 +210,7 @@
     font-size: 1.4em;
     color: $gray-50;
     text-align: center;
-    margin: 0.4em 0 0.2em;
+    margin: 0.4em 0 0.4em 0;
   }
   .prof-area{
     font-family: 'Nova Square', sans-serif;
@@ -223,10 +223,10 @@
     font-family: 'Libre Caslon Text', serif;
     font-style: italic;
     font-weight: 400;
-    font-size: .8em;
+    font-size: 0.9em;
     color: $gray-50;
     text-align: center;
-    margin: 0 0 .9em 0;
+    margin: 0 0 .2em 0;
   }
   .card-advisor{
     font-family: 'Nova Square', sans-serif;
