--- a/src/scss/article.scss
+++ b/src/scss/article.scss
@@ -19,32 +19,32 @@
       display: block;
       position: relative;
       top: 0;
-      height: 100px;
+      height: 140px;
       width: 100%;
 
       img.article-main-photo {
         position: relative;
         top: 0;
-        height: 100px;
+        height: 100%;
         width: 100%;
         object-fit: cover;
         object-position: 50% 40%;
         overflow: hidden;
       }
       img.article-main-photo.ces{
-        object-position: 50% 45%;
+        object-position: 50% 60%;
       }
       img.article-main-photo.pwe{
-        object-position: 50% 55%;
+        object-position: 20% 55%;
       }
       img.article-main-photo.ss{
-        object-position: 50% 65%;
+        object-position: 50% 62%;
       }
       /* The overlay effect - lays on top of the container and over the image */
       .overlay {
         position: absolute;
         top: 0;
-        height: 100px;
+        height: 140px;
         width: 100%;
         background: linear-gradient(rgba(58, 76, 105, 0.3), rgba(52, 65, 105, 0.3));
         transition: all .3s ease-in-out;
